--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
         <line id="p1_marker" x1="0" y1="0" x2="0" y2="0" stroke="#7c5cff" stroke-dasharray="6 4" opacity="0.06" />
       </svg>
     </div>
-    <p class="meta">Parameters used (level-1 model): μ<sub>n</sub>C<sub>ox</sub> = <span id="param_mu"></span> μA/V², W/L = <span id="param_wl"></span>, V<sub>t</sub> = <span id="param_vt"></span> V.</p>
+    <p class="meta">Parameters used (level-1 model): μ<sub>n</sub>C<sub>ox</sub> = <span id="param_mu"></span> μA/V², W/L = <span id="param_wl"></span>, V<sub>t</sub> = ? V.</p>
 
     <div class="row" style="margin-top:10px">
-      <input id="ans1" type="number" step="0.01" placeholder="e.g. 0.90" aria-label="Vt answer" />
+      <input id="ans1" type="number" step="0.01" placeholder="" aria-label="Vt answer" />
       <button id="p1_submit">Submit</button>
       <button class="ghost" onclick="toggleHint('p1_hint')">Show hint</button>
       <button class="ghost" onclick="toggleSteps('p1_steps')">Show steps</button>
@@ -98,7 +98,7 @@
     <h2>Puzzle 2 — Compute drain current <small>I<sub>D</sub> (saturation)</small></h2>
     <div class="meta">Given: μ<sub>n</sub>C<sub>ox</sub>, W/L (from parameters), and V<sub>GS</sub> = <span id="param_vgs"></span> V. Use V<sub>t</sub> from Puzzle 1.</div>
     <div style="margin-top:8px" class="row">
-      <input id="ans2" type="number" step="1" placeholder="e.g. 810" aria-label="Id answer" />
+      <input id="ans2" type="number" step="1" placeholder="" aria-label="Id answer" />
       <button id="p2_submit">Submit</button>
       <button class="ghost" onclick="toggleHint('p2_hint')">Show hint</button>
       <button class="ghost" onclick="toggleSteps('p2_steps')">Show steps</button>
@@ -114,7 +114,7 @@
     <h2>Puzzle 3 — Body effect (adjusted V<sub>t</sub>)</h2>
     <div class="meta">Formula: V<sub>t</sub>=V<sub>t0</sub> + γ(√(2φ<sub>F</sub> + V<sub>SB</sub>) − √(2φ<sub>F</sub>)).</div>
     <div style="margin-top:8px" class="row">
-      <input id="ans3" type="number" step="0.01" placeholder="e.g. 1.01" aria-label="adjusted Vt" />
+      <input id="ans3" type="number" step="0.01" placeholder="" aria-label="adjusted Vt" />
       <button id="p3_submit">Submit</button>
       <button class="ghost" onclick="toggleHint('p3_hint')">Show hint</button>
       <button class="ghost" onclick="toggleSteps('p3_steps')">Show steps</button>
@@ -130,7 +130,7 @@
     <h2>Puzzle 4 — CMOS inverter switching threshold V<sub>M</sub></h2>
     <div class="meta">Compute V<sub>M</sub> from the inverter transfer curve (balanced devices simplify to V<sub>DD</sub>/2).</div>
     <div style="margin-top:8px" class="row">
-      <input id="ans4" type="number" step="0.01" placeholder="e.g. 2.50" aria-label="Vm answer" />
+      <input id="ans4" type="number" step="0.01" placeholder="" aria-label="Vm answer" />
       <button id="p4_submit">Submit</button>
       <button class="ghost" onclick="toggleHint('p4_hint')">Show hint</button>
       <button class="ghost" onclick="toggleSteps('p4_steps')">Show steps</button>
