--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <line id="p1_marker" x1="0" y1="0" x2="0" y2="0" stroke="#7c5cff" stroke-dasharray="6 4" opacity="0.06" />
       </svg>
     </div>
-    <p class="meta">Parameters used (level-1 model): μ<sub>n</sub>C<sub>ox</sub> = <span id="param_mu"></span> μA/V², W/L = <span id="param_wl"></span>, V<sub>t</sub> = ? V.</p>
+    <p class="meta">Parameters used (level-1 model): μ<sub>n</sub>C<sub>ox</sub> = <span id="param_mu"></span> μA/V², W/L = <span id="param_wl"></span>, V<sub>t</sub> = <span id="param_vt"></span> V.</p>
 
     <div class="row" style="margin-top:10px">
       <input id="ans1" type="number" step="0.01" placeholder="" aria-label="Vt answer" />
